# binance-sentinel

./: .dockerignore  .env.example  .gitignore  README.md  deploy.sh  docker-compose.yml  pyproject.toml  render.yaml
backend/: Dockerfile  __init__.py  app.py  engine.py  integrations.py  storage.py  worker.py
backend/tests/: test_engine.py  test_storage.py
frontend/: Dockerfile  index.html  nginx.conf.template  package.json  pnpm-lock.yaml
frontend/src/: App.jsx  styles.css
